Fixed PUT request swagger doc
